# blitz

./: .gitignore  Cargo.toml  LICENSE  README.md  blitz.desktop  settings
src/: build.rs  main.rs  style.css  ui.xml  window.ui
src/clean/: clean_cache.rs  mod.rs  style.css
src/clean/storage/: mod.rs
src/process/: mod.rs  process_info.rs  style.css
